--- a/index.html
+++ b/index.html
@@ -1,150 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tashkent Explorer</title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tashkent Explorer | Find Places Near You</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <style>
-      #map {
-        height: 100vh;
-        z-index: 0;
-      }
-      .scrollbar-hide::-webkit-scrollbar {
-        display: none;
-      }
-      .leaflet-popup-content {
-        margin: 12px !important;
-        min-width: 200px;
-      }
+        #map {
+            height: 100%;
+            z-index: 0;
+        }
+        .leaflet-popup-content {
+            margin: 12px !important;
+            min-width: 200px;
+        }
+        @media (max-width: 768px) {
+            .main-container {
+                flex-direction: column;
+            }
+            .sidebar {
+                width: 100%;
+                height: 40vh;
+            }
+            .map-container {
+                width: 100%;
+                height: 60vh;
+            }
+        }
     </style>
-  </head>
-  <body class="flex h-screen overflow-hidden bg-gray-100">
-    <!-- Sidebar Panel -->
-    <div class="w-96 bg-white shadow-xl flex flex-col">
-      <!-- Header -->
-      <div class="p-6 bg-gradient-to-r from-blue-600 to-blue-800 text-white">
-        <h1 class="text-2xl font-bold">Tashkent Explorer</h1>
-        <p class="text-blue-100">
-          Discover the best places in Uzbekistan's capital
-        </p>
-      </div>
+</head>
+<body class="h-screen overflow-hidden bg-gray-100">
+    <div class="main-container flex h-full flex-col md:flex-row">
+        <!-- Sidebar Panel - Collapsible on mobile -->
+        <div class="sidebar w-full md:w-96 bg-white shadow-xl flex flex-col">
+            <!-- Header with mobile menu button -->
+            <div class="p-4 md:p-6 bg-gradient-to-r from-blue-600 to-blue-800 text-white flex justify-between items-center">
+                <div>
+                    <h1 class="text-xl md:text-2xl font-bold">Tashkent Explorer</h1>
+                    <p class="text-blue-100 text-sm md:text-base">Discover places near you</p>
+                </div>
+                <button id="mobile-menu-btn" class="md:hidden text-white">
+                    <i class="fas fa-bars text-xl"></i>
+                </button>
+            </div>
 
-      <!-- Search Box -->
-      <div class="p-4 border-b">
-        <div class="relative">
-          <input
-            id="search-input"
-            type="text"
-            placeholder="Search location..."
-            class="w-full p-3 pl-10 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
-          />
-          <i class="fas fa-search absolute left-3 top-4 text-gray-400"></i>
-          <button
-            id="search-btn"
-            class="absolute right-2 top-2 bg-blue-600 text-white p-1 px-3 rounded-md hover:bg-blue-700 transition"
-          >
-            Go
-          </button>
+            <!-- Mobile menu (hidden by default) -->
+            <div id="mobile-menu" class="md:hidden hidden bg-blue-700 text-white px-4 py-2">
+                <div class="flex space-x-4 overflow-x-auto pb-2">
+                    <button id="mobile-find-restaurants" class="flex-shrink-0 flex items-center gap-2 p-2 bg-orange-100 text-orange-800 rounded-lg text-sm">
+                        <i class="fas fa-utensils"></i>
+                        <span>Eat</span>
+                    </button>
+                    <button id="mobile-find-entertainment" class="flex-shrink-0 flex items-center gap-2 p-2 bg-purple-100 text-purple-800 rounded-lg text-sm">
+                        <i class="fas fa-music"></i>
+                        <span>Fun</span>
+                    </button>
+                    <button id="mobile-show-landmarks" class="flex-shrink-0 flex items-center gap-2 p-2 bg-green-100 text-green-800 rounded-lg text-sm">
+                        <i class="fas fa-landmark"></i>
+                        <span>See</span>
+                    </button>
+                    <button id="mobile-locate-me" class="flex-shrink-0 flex items-center gap-2 p-2 bg-blue-100 text-blue-800 rounded-lg text-sm">
+                        <i class="fas fa-location-arrow"></i>
+                        <span>Locate</span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Search Box -->
+            <div class="p-3 md:p-4 border-b">
+                <div class="relative">
+                    <input 
+                        id="search-input"
+                        type="text" 
+                        placeholder="Search location..." 
+                        class="w-full p-2 md:p-3 pl-9 text-sm md:text-base rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+                    >
+                    <i class="fas fa-search absolute left-3 top-3 md:top-4 text-gray-400"></i>
+                    <button 
+                        id="search-btn"
+                        class="absolute right-2 top-1.5 md:top-2 bg-blue-600 text-white p-1 px-2 md:px-3 rounded-md hover:bg-blue-700 transition text-sm md:text-base"
+                    >
+                        Go
+                    </button>
+                </div>
+            </div>
+
+            <!-- Main Content Area -->
+            <div class="flex-1 flex flex-col overflow-hidden">
+                <!-- Controls -->
+                <div class="p-3 md:p-4 space-y-3 border-b">
+                    <h2 class="font-semibold text-gray-700 text-sm md:text-base">Discover Nearby</h2>
+                    <div class="grid grid-cols-2 gap-2 md:gap-3">
+                        <button 
+                            id="find-restaurants"
+                            class="flex items-center justify-center gap-1 md:gap-2 p-2 md:p-3 bg-orange-100 text-orange-800 rounded-lg hover:bg-orange-200 transition text-sm md:text-base"
+                        >
+                            <i class="fas fa-utensils"></i>
+                            <span>Restaurants</span>
+                        </button>
+                        <button 
+                            id="find-entertainment"
+                            class="flex items-center justify-center gap-1 md:gap-2 p-2 md:p-3 bg-purple-100 text-purple-800 rounded-lg hover:bg-purple-200 transition text-sm md:text-base"
+                        >
+                            <i class="fas fa-music"></i>
+                            <span>Entertainment</span>
+                        </button>
+                        <button 
+                            id="show-landmarks"
+                            class="flex items-center justify-center gap-1 md:gap-2 p-2 md:p-3 bg-green-100 text-green-800 rounded-lg hover:bg-green-200 transition text-sm md:text-base"
+                        >
+                            <i class="fas fa-landmark"></i>
+                            <span>Landmarks</span>
+                        </button>
+                        <button 
+                            id="clear-all"
+                            class="flex items-center justify-center gap-1 md:gap-2 p-2 md:p-3 bg-gray-100 text-gray-800 rounded-lg hover:bg-gray-200 transition text-sm md:text-base"
+                        >
+                            <i class="fas fa-broom"></i>
+                            <span>Clear</span>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Filters -->
+                <div class="p-3 md:p-4 border-b">
+                    <h2 class="font-semibold text-gray-700 mb-2 md:mb-3 text-sm md:text-base">Filters</h2>
+                    <div class="space-y-2 md:space-y-3">
+                        <div>
+                            <label class="block text-xs md:text-sm text-gray-600 mb-1">Cuisine Type</label>
+                            <select id="cuisine-filter" class="w-full p-1 md:p-2 border rounded-lg text-sm md:text-base">
+                                <option value="all">All Cuisines</option>
+                                <option value="plov">Osh (Plov)</option>
+                                <option value="lagman">Lagʻmon</option>
+                                <option value="somsa">Somsa</option>
+                                <option value="shashlik">Shashlik</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label class="flex items-center space-x-2">
+                                <input type="checkbox" id="halal-filter" class="rounded text-blue-600">
+                                <span class="text-xs md:text-sm text-gray-600">Halal Only</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Results List -->
+                <div class="flex-1 overflow-y-auto">
+                    <h2 class="p-3 md:p-4 font-semibold text-gray-700 border-b text-sm md:text-base">Results</h2>
+                    <div id="results-container" class="divide-y">
+                        <!-- Results will be inserted here by JavaScript -->
+                        <div class="p-4 text-center text-gray-500">
+                            Select an option to see places
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <!-- Controls -->
-      <div class="p-4 space-y-4 border-b">
-        <h2 class="font-semibold text-gray-700">Discover</h2>
-        <div class="grid grid-cols-2 gap-3">
-          <button
-            id="find-restaurants"
-            class="flex items-center justify-center gap-2 p-3 bg-orange-100 text-orange-800 rounded-lg hover:bg-orange-200 transition"
-          >
-            <i class="fas fa-utensils"></i>
-            Restaurants
-          </button>
-          <button
-            id="find-entertainment"
-            class="flex items-center justify-center gap-2 p-3 bg-purple-100 text-purple-800 rounded-lg hover:bg-purple-200 transition"
-          >
-            <i class="fas fa-music"></i>
-            Entertainment
-          </button>
-          <button
-            id="show-landmarks"
-            class="flex items-center justify-center gap-2 p-3 bg-green-100 text-green-800 rounded-lg hover:bg-green-200 transition"
-          >
-            <i class="fas fa-landmark"></i>
-            Landmarks
-          </button>
-          <button
-            id="clear-all"
-            class="flex items-center justify-center gap-2 p-3 bg-gray-100 text-gray-800 rounded-lg hover:bg-gray-200 transition"
-          >
-            <i class="fas fa-broom"></i>
-            Clear
-          </button>
+        <!-- Map Area -->
+        <div class="map-container flex-1 relative">
+            <div id="map"></div>
+            <div class="absolute bottom-4 left-4 z-20 bg-white p-2 rounded-lg shadow-md flex gap-2">
+                <button id="locate-me" class="flex items-center gap-2 p-2 text-blue-600 text-sm md:text-base">
+                    <i class="fas fa-location-arrow"></i>
+                    <span class="hidden md:inline">My Location</span>
+                </button>
+                <button id="zoom-in" class="flex items-center justify-center w-8 h-8 bg-gray-100 rounded-md">
+                    <i class="fas fa-plus"></i>
+                </button>
+                <button id="zoom-out" class="flex items-center justify-center w-8 h-8 bg-gray-100 rounded-md">
+                    <i class="fas fa-minus"></i>
+                </button>
+            </div>
         </div>
-      </div>
-
-      <!-- Filters -->
-      <div class="p-4 border-b">
-        <h2 class="font-semibold text-gray-700 mb-3">Filters</h2>
-        <div class="space-y-3">
-          <div>
-            <label class="block text-sm text-gray-600 mb-1">Cuisine Type</label>
-            <select id="cuisine-filter" class="w-full p-2 border rounded-lg">
-              <option value="all">All Cuisines</option>
-              <option value="plov">Osh (Plov)</option>
-              <option value="lagman">Lagʻmon</option>
-              <option value="somsa">Somsa</option>
-              <option value="shashlik">Shashlik</option>
-            </select>
-          </div>
-          <div>
-            <label class="flex items-center space-x-2">
-              <input
-                type="checkbox"
-                id="halal-filter"
-                class="rounded text-blue-600"
-              />
-              <span class="text-sm text-gray-600">Halal Only</span>
-            </label>
-          </div>
-        </div>
-      </div>
-
-      <!-- Results List -->
-      <div class="flex-1 overflow-y-auto scrollbar-hide">
-        <h2 class="p-4 font-semibold text-gray-700 border-b">Results</h2>
-        <div id="results-container" class="divide-y">
-          <!-- Results will be inserted here by JavaScript -->
-        </div>
-      </div>
-    </div>
-
-    <!-- Map Area -->
-    <div class="flex-1 relative">
-      <div id="map"></div>
-      <div
-        class="absolute bottom-4 left-4 z-20 bg-white p-2 rounded-lg shadow-md"
-      >
-        <button
-          id="locate-me"
-          class="flex items-center gap-2 p-2 text-blue-600"
-        >
-          <i class="fas fa-location-arrow"></i>
-          My Location
-        </button>
-      </div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="app.js"></script>
-  </body>
+    <script>
+        // Mobile menu toggle
+        document.getElementById('mobile-menu-btn').addEventListener('click', function() {
+            const menu = document.getElementById('mobile-menu');
+            menu.classList.toggle('hidden');
+        });
+
+        // Mobile button handlers
+        document.getElementById('mobile-find-restaurants').addEventListener('click', function() {
+            document.getElementById('find-restaurants').click();
+            document.getElementById('mobile-menu').classList.add('hidden');
+        });
+        document.getElementById('mobile-find-entertainment').addEventListener('click', function() {
+            document.getElementById('find-entertainment').click();
+            document.getElementById('mobile-menu').classList.add('hidden');
+        });
+        document.getElementById('mobile-show-landmarks').addEventListener('click', function() {
+            document.getElementById('show-landmarks').click();
+            document.getElementById('mobile-menu').classList.add('hidden');
+        });
+        document.getElementById('mobile-locate-me').addEventListener('click', function() {
+            document.getElementById('locate-me').click();
+            document.getElementById('mobile-menu').classList.add('hidden');
+        });
+
+        // Zoom controls
+        document.getElementById('zoom-in').addEventListener('click', function() {
+            map.zoomIn();
+        });
+        document.getElementById('zoom-out').addEventListener('click', function() {
+            map.zoomOut();
+        });
+    </script>
+</body>
 </html>
